# commemorate

./: Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  list.rs  mod.rs  tell.rs
src/utils/: encryption.rs  file.rs  mod.rs  time.rs
