[package]
name = "commemorate"
version = "0.0.0"
edition = "2018"
authors = ["Muhan Xiao <syrupcake@protonmail.com>"]
description = "Still under development, no content. It will be a formatted time converter"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
