[package]
name = "commemorate"
version = "0.0.1"
edition = "2021"
authors = ["Muhan Xiao <syrupcake@protonmail.com>"]
readme = "README.md"
description = "A CLI tool to commemorate important events."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
argon2 = "0.5"
aes-gcm = "0.10.3"
rpassword = "7.3.1"
rand = "0.8"
dirs = "5.0"
chrono-tz = "0.9.0"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.5"